--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/styled-components": "^5.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "unstated-next": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
