--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "^5.5.1",
-    "@react-navigation/stack": "^5.5.1",
+    "@react-navigation/stack": "^5.6.2",
     "@types/styled-components": "^5.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
-    "react-native-safe-area-context": "^3.0.5",
+    "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
     "styled-components": "^5.1.1",
     "unstated-next": "^1.1.0"
