--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.5.2",
+    "@react-navigation/drawer": "^5.8.4",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.6.2",
+    "@types/react-native-vector-icons": "^6.4.5",
     "@types/styled-components": "^5.1.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -28,6 +30,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "styled-components": "^5.1.1",
     "unstated-next": "^1.1.0"
   },
