--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
         "alias": {
           "@src": "./src",
           "@screens": "./src/screens",
+          "@components": "./src/components",
           "test": "./test",
           "underscore": "lodash"
         }
