--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.6.2",
     "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-easy-toast": "^1.2.0",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
+    "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^6.6.0",
     "styled-components": "^5.1.1",
     "unstated-next": "^1.1.0"
