--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "react": "16.11.0",
+    "react-hook-form": "^6.0.8",
     "react-native": "0.62.2",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
