--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "^2.9.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^10.3.2",
     "styled-components": "^5.1.1",
     "unstated-next": "^1.1.0"
   },
