--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "0.62.2",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "^1.9.0",
