--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-image-picker": "^2.3.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
+    "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
     "react-native-screens": "^2.9.0",
