--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^5.6.2",
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
+    "axios-hooks": "^2.1.0",
     "moment": "^2.27.0",
     "react": "16.11.0",
     "react-hook-form": "^6.0.8",
