--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-permissions": "^2.1.5",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.6",
+    "react-native-scalable-image": "^1.0.0",
     "react-native-screens": "^2.9.0",
     "react-native-tiny-toast": "^1.0.7",
     "react-native-vector-icons": "^6.6.0",
@@ -67,7 +68,8 @@
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "react-test-renderer": "16.11.0",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "unsplash-js": "^6.0.0"
   },
   "jest": {
     "preset": "react-native",
