--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-import": "^2.22.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-test-renderer": "16.11.0",
     "typescript": "^3.9.5",
     "unsplash-js": "^6.0.0"
